Fixing layout issues (#42)

--- a/src/main/javascript/PersonalApiTokens/TokensList/TokenTableRow/TokenTableRow.scss
+++ b/src/main/javascript/PersonalApiTokens/TokensList/TokenTableRow/TokenTableRow.scss
@@ -7,5 +7,13 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    min-height: 64px;
+}
+
+.cellFont.cellFont {
+    padding: 12px 16px;
+
+    font: 16px 'Nunito Sans', sans-serif !important;
+    color: var(--color-dark);
+
+    border-bottom: 0 !important;
 }
